# playground

./: README.md
cmakeTutorial/: .gitignore  CMakeLists.txt  tutorial.cxx
cmakeTutorial/MathFunctions/: CMakeLists.txt
cmakeTutorial/src/: CMakeLists.txt  License.txt  tutorial.cpp  tutorial.cxx
cmakeTutorial/src/MathFunctions/: CMakeLists.txt  MathFunctions.hpp  mysqrt.cpp  mysqrt.cxx
py/: matchMac.py  opencv-inst.sh  readMac.py  readQR.py
py/rpiShutdownDaemon/: README.md  pi_shutdown.rc  shutdown_d.py
qt/SoundTest/: SoundTest.pro  main.cpp  playerdialog.cpp  playerdialog.h  playerdialog.ui
sfexe/: README.md  ttyecho.c
tutorial/: .gitignore
tutorial/cmake/src/: CMakeLists.txt  TutorialConfig.hpp.in
tutorial/cmake/src/MathFunctions/: CMakeLists.txt  MakeTable.cpp  MathFunctions.hpp
